--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,8 +1,10 @@
-<div class="container">
+<div class="container mt-3">
   <div class="row">
+
     <section class="col-3">
-      <h5 class="text-warning ml-3">Sort</h5>
-      <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
+      <ng-container *ngIf="brands && types">
+      <h5 class="text-warning ml-3 mt-4 mb-3">Sort</h5>
+      <select class="custom-select mb-4" (change)="onSortSelected($event.target.value)">
         <option *ngFor="let sort of sortOptions" [value]="sort.value">
           {{sort.name}}
         </option>
@@ -21,6 +23,7 @@
           [value]="type.id" (click)="onTypeSelected(type.id)">
           {{type.name}}</li>
       </ul>
+    </ng-container>
     </section>
 
     <section class="col-9">
@@ -31,7 +34,7 @@
           [pageNumber] ="this.shopParams.pageNumber">
         </app-paging-header>
 
-        <div class="form-inline mt-2">
+        <div class="form-inline" *ngIf="products">
           <input type="text" (keyup.enter)="onSearch()" #search class="form-control mr-2" style="width: 300px;"
            placeholder="Search">
           <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
