--- a/client/src/app/checkout/checkout-success/checkout-success.component.html
+++ b/client/src/app/checkout/checkout-success/checkout-success.component.html
@@ -4,5 +4,7 @@
     </div>
     <h2>Thank you. Your order is confirmed</h2>
     <p class="mb-4">Your order hasn't shipped yet, but this is expected because we are not a real store!</p>
-    <button class="btn btn-outline-success">View your order</button>
+    <button *ngIf="order" routerLink="/orders/{{order?.id}}" class="btn btn-outline-success">View your order</button>
+    <button *ngIf="!order" routerLink="/orders" class="btn btn-outline-success">View your orders</button>
+
 </div>
