--- a/client/src/app/checkout/checkout.component.html
+++ b/client/src/app/checkout/checkout.component.html
@@ -3,10 +3,14 @@
         <div class="col-8">
             <app-stepper [linearModeSelected]="false" #appStepper>
                 <cdk-step [label]="'Address'" [completed]="(checkoutForm.get('addressForm')).valid">
-                    <app-checkout-address [checkoutForm]="checkoutForm"></app-checkout-address>
+                    <app-checkout-address [checkoutForm]="checkoutForm" 
+                        [isCompleted]="(checkoutForm.get('addressForm')).valid">
+                    </app-checkout-address>
                 </cdk-step>
                 <cdk-step [label]="'Delivery'" [completed]="(checkoutForm.get('deliveryForm')).valid">
-                    <app-checkout-delivery [checkoutForm]="checkoutForm"></app-checkout-delivery>
+                    <app-checkout-delivery [checkoutForm]="checkoutForm"
+                        [isCompleted]="(checkoutForm.get('deliveryForm')).valid">
+                    </app-checkout-delivery>
                 </cdk-step>
                 <cdk-step [label]="'Review'">
                     <app-checkout-review></app-checkout-review>
@@ -17,7 +21,12 @@
             </app-stepper>
         </div>
         <div class="col-4">
-            <app-order-totals></app-order-totals>
+            <app-order-totals
+            *ngIf="(basketTotals$ | async)"
+            [shippingPrice]= "(basketTotals$ | async).shipping"
+            [subtotal] ="(basketTotals$ | async).subtotal"
+            [total] ="(basketTotals$ | async).total">>
+            </app-order-totals>
         </div>
     </div>
 </div>
