--- a/client/src/app/shared/components/stepper/stepper.component.html
+++ b/client/src/app/shared/components/stepper/stepper.component.html
@@ -4,8 +4,9 @@
             <button 
             (click)="onClick(i)"
             [class.active]="selectedIndex === i"
-            class="nav-link py-3 text-uppercase font-weight-bold btn-block">
-                {{step.label}}:{{step.completed}}
+            class="nav-link text-uppercase font-weight-bold btn-block" style="padding: 1.20em">
+                {{step.label}}
+                <i class="fa fa-check-circle" *ngIf="step.completed"></i>
             </button>
         </li>
     </ul>
