--- a/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
+++ b/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
@@ -7,8 +7,7 @@
             value="{{method.id}}"
             formControlName="deliveryMethod"
             class="custom-control-input"
-            (click)="setShippingPrice(method)"
-            >
+            (click)="setShippingPrice(method)">
             <label for="{{method.id}}" class="custom-control-label">
                 <strong>{{method.shortName}} - {{method.price | currency}}</strong>
                 <br>
