--- a/client/src/app/checkout/checkout.component.html
+++ b/client/src/app/checkout/checkout.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-8">
-            <app-stepper [linearModeSelected]="false" #appStepper>
+            <app-stepper [linearModeSelected]="true" #appStepper>
                 <cdk-step [label]="'Address'" [completed]="(checkoutForm.get('addressForm')).valid">
                     <app-checkout-address [checkoutForm]="checkoutForm" 
                         [isCompleted]="(checkoutForm.get('addressForm')).valid">
@@ -13,7 +13,7 @@
                     </app-checkout-delivery>
                 </cdk-step>
                 <cdk-step [label]="'Review'">
-                    <app-checkout-review></app-checkout-review>
+                    <app-checkout-review [appStepper]="appStepper"></app-checkout-review>
                 </cdk-step>
                 <cdk-step [label]="'Payment'" >
                     <app-checkout-payment [checkoutForm]="checkoutForm"></app-checkout-payment>
@@ -25,7 +25,7 @@
             *ngIf="(basketTotals$ | async)"
             [shippingPrice]= "(basketTotals$ | async).shipping"
             [subtotal] ="(basketTotals$ | async).subtotal"
-            [total] ="(basketTotals$ | async).total">>
+            [total] ="(basketTotals$ | async).total">
             </app-order-totals>
         </div>
     </div>
