--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -5,7 +5,9 @@
       <ng-container *ngIf="brands && types">
       <h5 class="text-warning ml-3 mt-4 mb-3">Sort</h5>
       <select class="custom-select mb-4" (change)="onSortSelected($event.target.value)">
-        <option *ngFor="let sort of sortOptions" [value]="sort.value">
+        <option *ngFor="let sort of sortOptions" 
+        [value]="sort.value"
+        [selected]="shopParams.sort ===sort.value">
           {{sort.name}}
         </option>
       </select>
@@ -52,6 +54,7 @@
         <app-pager
           [pageSize] = "shopParams.pageSize"
           [totalCount] = "totalCount"
+          [pageNumber] = "shopParams.pageNumber"
           (pageChanged) = "onPageChanged($event)"
           >
         </app-pager>
