--- a/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
+++ b/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
@@ -1,19 +1,18 @@
 <div class="mt-4" [formGroup]="checkoutForm">
     <h4 class="mb-3">Choose your delivery method</h4>
-    <div class="row ml-5" formGroupName="deliveryForm">
-        <div class="col-6 form-group" *ngFor="let method of deliveryMethods">
+    <div class="row mb-2" formGroupName="deliveryForm">
+        <div class="col-6 mb-3" *ngFor="let method of deliveryMethods">
             <input type="radio"
             id="{{method.id}}"
             value="{{method.id}}"
             formControlName="deliveryMethod"
-            class="custom-control-input"
+            class="form-ckeck-input"
             (click)="setShippingPrice(method)">
-            <label for="{{method.id}}" class="custom-control-label">
+            <label for="{{method.id}}" class="form-check-label ms-2">
                 <strong>{{method.shortName}} - {{method.price | currency}}</strong>
                 <br>
                 <span class="label-description">{{method.description}}</span>
             </label>
-
         </div>
     </div>
 </div>
