--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -7,6 +7,7 @@ mb-3 bg-white border-bottom shadow-sm fixed-top">
       [routerLinkActiveOptions]="{exact: true}">Home</a>
       <a class="p-2" routerLink ="/shop" routerLinkActive ="active">Shop</a>
       <a class="p-2" routerLink ="/test-error" routerLinkActive = "active">Errors</a>
+      <a class="p-2" routerLink ="/admin" routerLinkActive = "active">Admin</a>
     </nav>
    <div class="d-flex align-items-center">
     <a routerLink ="/basket" class="position-relative">
